Added javascript link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap"
     async defer></script>
+    <script src="./assets/javascript/app.js"></script>
     
 </body>
 </html>
