--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"><!-- Bootstrap link -->
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"> <!--custom styled CSS-->
+    <link rel="stylesheet" type="text/css" href="./style.css"> <!--custom styled CSS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>   <!--jquery reference-->
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>   <!--firebase reference-->
     <title>Hiking App</title>
@@ -15,12 +15,15 @@
         <div class="row" id="map">
             <div class="col">this is where the map will live</div>
         </div>
-
     </div>
-
+<div class="footer">
+    <div class="card-footer text-muted" id="footer">
+            <div class=l-foot>&copy;2018</div>
+            <div class=r-foot>WAAG</div>
+          </div>
+</div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap"
     async defer></script>
-    <script src="./assets/javascript/app.js"></script>
     
 </body>
 </html>
