--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
     <title>Hiking App</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row" id="map">
-            <div class="col">this is where the map will live</div>
-        </div>
-
+    <div id="map">
+    
     </div>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap" type="text/javascript"
     async defer></script>
     <script src="./assets/javascript/app.js"></script>
     
+
 </body>
 </html>
