--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <!-- Bootstrap link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
-    <!-- Bootstrap link -->
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <!--custom styled CSS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!--jquery reference-->
-    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <!--firebase reference-->
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
     <title>Hiking App</title>
 </head>
 
@@ -39,19 +35,26 @@
             </div>
         </div>
     </div>
-<div id="map">
-    
+    <div id="map">
     </div>
 
-<div class="footer">
-    <div class="card-footer text-muted" id="footer">
+    <div class="footer">
+        <div class="card-footer text-muted" id="footer">
             <div class=l-foot>&copy;2018</div>
             <div class=r-foot>WAAG</div>
-          </div>
-</div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap"
-    async defer></script>
-    
+        </div>
+    </div>
+    <!--jquery reference-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--firebase reference-->
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+
+    <!--JavaScript reference-->
+    <script src="./assets/javascript/app.js"></script>
+    <!--Google Map reference-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap" async
+        defer></script>
+
 
 </body>
 
