Correted id's for FIrebase Auth API

--- a/signin.html
+++ b/signin.html
@@ -50,8 +50,9 @@
                           <label for="Password">Password</label>
                           <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
-                        <button type="submit" id="signin" class="btn btn-primary">Sign-In</button>
                         <button type="submit" id="signup" class="btn btn-primary">Sign-up</button>
+                        <button type="submit" id="login" class="btn btn-primary">Log-in</button>
+                        <button type="submit" id="logout" class="btn btn-primary">Log-out</button>
                 </form>
             </div>
         </div>
@@ -65,7 +66,7 @@
 </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap"
     async defer></script>
-    
+    <script src= "assets/javascript/app.js"></script>
 </body>
 
 </html>
