added google font links in html and css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!--custom styled CSS-->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
+    <!--google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Anton|Damion|Signika:300" rel="stylesheet">
+
     <title>Hiking App</title>
 </head>
 
