created html frames for search results and signin

--- a/results.html
+++ b/results.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <!-- Header -->
     <div class="container">
         <div class="row container">
             <div class="col">
@@ -43,13 +44,14 @@
             <div class="col"></div>
         </div>
     </div>
-
+<!-- footer -->
 <div class="footer">
     <div class="card-footer text-muted" id="footer">
             <div class=l-foot>&copy;2018</div>
             <div class=r-foot>WAAG</div>
           </div>
 </div>
+<!-- google api -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap"
     async defer></script>
     
