--- a/signin.html
+++ b/signin.html
@@ -34,7 +34,7 @@
                     <div class="" id="navbarSupportedContent">
                         <ul class="navbar-nav">
                             <li class="nav-item pr-3">
-                                <a class="nav-link" href="#">Log-out</a>
+                                <button type="submit" id="logout" class="btn btn-primary">Log-out</button>
                             </li>
                         </ul>
                     </div>
