added background textures

--- a/signin.html
+++ b/signin.html
@@ -23,9 +23,9 @@
 
 <body>
     <div class="container">
-        <div class="row container">
+        <div class="row container" id="navigation">
             <div class="col">
-                <nav class="navbar navbar-expand-sm navbar-light bg-light px-0 py-0">
+                <nav class="navbar navbar-expand-sm px-0 py-0">
                     <div class="mr-auto">
                         <a class="navbar-brand px-0 py-0" href="https://placeholder.com">
                             <img src="http://via.placeholder.com/200x75" href="#">
