adjusting placement size of map

--- a/results.html
+++ b/results.html
@@ -39,11 +39,10 @@
                 </nav>
             </div>
         </div>
-
-        <div class="row" id="map">
-            <div class="col"></div>
-        </div>
+    <div class="col-sm-4">
+        <div class="row" id="map"></div>
     </div>
+</div>
 <!-- footer -->
 <div class="footer">
     <div class="card-footer text-muted" id="footer">
