--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div id="map">
+    <div class="col" id="map">
     </div>
 
     <div class="footer">
