Added Hike API with Google lat,long calls

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!--JavaScript reference-->
     <script src="./assets/javascript/app.js"></script>
     <!--Google Map reference-->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap" async
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&libraries=places" async
         defer></script>
 
 
