--- a/search.html
+++ b/search.html
@@ -119,6 +119,7 @@
                             <input class="form-check-input" type="radio" name="twentyfourresults" id="inlineRadio3" value="option3">
                             <label class="form-check-label" for="inlineRadio3">24 results</label>
                           </div>
+                          <input id="search-info" type="submit" value="Location Search">
                 </form>
             </div>
         </div>
@@ -131,8 +132,9 @@
     </div>
 </div>
 <!-- google maps script -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&libraries=places"
     async defer></script>
+    <script src="./assets/javascript/app.js"></script>
     
 </body>
 
