fixed navbar design

--- a/results.html
+++ b/results.html
@@ -20,41 +20,45 @@
 
 <body>
     <!-- Header -->
-    <div class="container">
-        <div class="row container">
-            <div class="col">
-                <nav class="navbar navbar-expand-sm navbar-light bg-light px-0 py-0">
-                    <div class="mr-auto">
-                        <a class="navbar-brand px-0 py-0" href="https://placeholder.com">
-                            <img src="http://via.placeholder.com/200x75" href="#">
-                        </a>
-                    </div>
-                    <div class="" id="navbarSupportedContent">
-                        <ul class="navbar-nav">
-                            <li class="nav-item pr-3">
-                                <a class="nav-link" href="#">Log-out</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+    <div class="container-fluid px-0 bg-offwhite">
+        <nav class="navbar navbar-expand-sm navbar-light bg-offwhite container">
+            <div class="mr-auto">
+                <a class="navbar-brand" href="https://placeholder.com">
+                    <img src="http://via.placeholder.com/200x60" href="#">
+                </a>
             </div>
-        </div>
-
-        <div class="row" id="map">
-            <div class="col"></div>
-        </div>
+            <div class="" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item pr-3">
+                        <a class="nav-link" href="#">Log-out</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
-<!-- footer -->
-<div class="footer">
-    <div class="card-footer text-muted" id="footer">
+
+    <!-- <nav class="navbar navbar-expand-lg navbar-light  container-fluid">
+            <div class="container">
+
+            </div>
+
+        </nav> -->
+
+    <div class="row" id="map">
+        <div class="col"></div>
+    </div>
+    </div>
+    <!-- footer -->
+    <div class="footer">
+        <div class="card-footer text-muted" id="footer">
             <div class=l-foot>&copy;2018</div>
             <div class=r-foot>WAAG</div>
-          </div>
-</div>
-<!-- google api -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap"
-    async defer></script>
-    
+        </div>
+    </div>
+    <!-- google api -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap" async
+        defer></script>
+
 </body>
 
 </html>
