--- a/results.html
+++ b/results.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!-- Bootstrap link -->
@@ -17,43 +15,41 @@
     <!--firebase reference-->
     <title>Hiking App</title>
 </head>
-
 <body>
     <!-- Header -->
-    <div class="container">
-        <div class="row container">
-            <div class="col">
-                <nav class="navbar navbar-expand-sm navbar-light bg-light px-0 py-0">
-                    <div class="mr-auto">
-                        <a class="navbar-brand px-0 py-0" href="https://placeholder.com">
-                            <img src="http://via.placeholder.com/200x75" href="#">
-                        </a>
-                    </div>
-                    <div class="" id="navbarSupportedContent">
-                        <ul class="navbar-nav">
-                            <li class="nav-item pr-3">
-                                <a class="nav-link" href="#">Log-out</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+    <div class="container-fluid px-0 bg-offwhite">
+        <nav class="navbar navbar-expand-sm navbar-light bg-offwhite container">
+            <div class="mr-auto">
+                <a class="navbar-brand" href="https://placeholder.com">
+                    <img src="http://via.placeholder.com/200x60" href="#">
+                </a>
             </div>
-        </div>
-    <div class="col-sm-4">
-        <div class="row" id="map"></div>
+            <div class="" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item pr-3">
+                        <a class="nav-link" href="#">Log-out</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
-</div>
-<!-- footer -->
-<div class="footer">
-    <div class="card-footer text-muted" id="footer">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light  container-fluid">
+            <div class="container">
+            </div>
+        </nav> -->
+    <div class="row" id="map">
+        <div class="col"></div>
+    </div>
+    </div>
+    <!-- footer -->
+    <div class="footer">
+        <div class="card-footer text-muted" id="footer">
             <div class=l-foot>&copy;2018</div>
             <div class=r-foot>WAAG</div>
-          </div>
-</div>
-<!-- google api -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap"
-    async defer></script>
-    
+        </div>
+    </div>
+    <!-- google api -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap" async
+        defer></script>
 </body>
-
 </html>
