adjusted elements placement

--- a/results.html
+++ b/results.html
@@ -44,11 +44,10 @@
     </div>
     </div>
     <!-- footer -->
-    <div class="footer">
-        <div class="card-footer text-muted" id="footer">
-            <div class=l-foot>&copy;2018</div>
-            <div class=r-foot>WAAG</div>
-        </div>
+    <div class="footer fixed-bottom">
+            <div class="card-footer text-muted" id="footer">
+                <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
+            </div>
     </div>
     <!-- google api -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap" async
