--- a/search.html
+++ b/search.html
@@ -39,18 +39,19 @@
                     </div>
                 </nav>
         </div>
+<!-- body content -->
         <div class="container">
                 <div class="row" id="signintext">
-                    <div class="col"></div>
+                    <div class="col-3"></div>
                     <div class="col-6">
                             <h4>find-a-hike</h4>
                             <h1>Trail Search</h1>
                             <p>Help us find your next hike and fill out the form below.</p>
                     </div>
-                    <div class="col"></div>
+                    <div class="col-3"></div>
                 </div>
                 <div class="row">
-                    <div class="col"></div>
+                    <div class="col-3"></div>
                     <div class="col-6">
                         <form id="signin-form">
                             <div class="form-group">
@@ -118,14 +119,12 @@
                             </div>
                             <button type="submit" id="searchtrails" class="btn btn-primary">Search Trails</button>
                     </div>
-                    <div class="col"></div>
-=======
-
+                    <div class="col-3"></div>
             </div>
         </div>
 </div>
 <!-- footer -->
-<div class="footer">
+<div class="footer fixed-bottom">
         <div class="card-footer text-muted" id="footer">
             <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
         </div>
