finished results page and adjustd spacing between footer

--- a/search.html
+++ b/search.html
@@ -38,32 +38,20 @@
             </div>
         </nav>
     </div>
-
-    <!-- Search Form -->
-    <div class="container">
-        <div class="row" id="signintext">
-            <div class="col"></div>
-            <div class="col-6">
-                <h4>find-a-hike</h4>
-                <h1>Trail Search</h1>
-                <p>Help us find your next hike and fill out the form below.</p>
-            </div>
-            <div class="col"></div>
-        </div>
 <!-- body content -->
         <div class="container">
                 <div class="row" id="signintext">
-                    <div class="col-3"></div>
-                    <div class="col-6">
+                    <div class="col"></div>
+                    <div class="col-8">
                             <h4>find-a-hike</h4>
                             <h1>Trail Search</h1>
                             <p>Help us find your next hike and fill out the form below.</p>
                     </div>
-                    <div class="col-3"></div>
+                    <div class="col"></div>
                 </div>
-                <div class="row">
-                    <div class="col-3"></div>
-                    <div class="col-6">
+                <div class="row" id="bodycontent">
+                    <div class="col"></div>
+                    <div class="col-8">
                         <form id="signin-form">
                             <div class="form-group">
                                 <label for="city">City Name</label>
@@ -130,7 +118,7 @@
                             </div>
                             <button type="submit" id="searchtrails" class="btn btn-primary">Search Trails</button>
                     </div>
-                    <div class="col-3"></div>
+                    <div class="col"></div>
         </div>
     </div>
 </div>
