--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
     <!--jquery reference-->
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <!--firebase reference-->
-    <title>Hiking App</title>
+    <title>Take-A-Hike</title>
 </head>
 
 
@@ -44,16 +44,16 @@
     <div class="container">
         <div class="row" id="signintext">
             <div class="col"></div>
-            <div class="col-6">
+            <div class="col-8">
                 <h4>take-a-hike</h4>
                 <h1>Hello Hiker</h1>
                 <p>The trails are calling! Let's find the perfect trail for your next adventure. But first, please sign in.</p>
             </div>
             <div class="col"></div>
         </div>
-        <div class="row">
+        <div class="row" id="bodycontent">
             <div class="col"></div>
-            <div class="col-6">
+            <div class="col-8">
                 <form id="signin-form">
                     <div class="form-group">
                         <label for="Email">Email*</label>
