--- a/results.html
+++ b/results.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!-- Bootstrap link -->
@@ -37,21 +38,61 @@
             </div>
         </nav>
     </div>
+<!-- body content -->
+        <div class="container">
+                <div class="row" id="signintext">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                            <h4>you searched:</h4>
+                            <h1><span id="display-city-state">location here</span></h1>
+                            <p>number of results:</p>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
 
-    <!-- Results Area -->
-    <div class="row" id="map">
-        <div class="col"></div>
+                <div class="row" id="bodycontent">
+                    <div class=col-1></div>
+                    <div class=col-10>
+                    <div class="card-deck">
+                        <div class="card">
+                            <img class="card-img-top" src="..." alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Hike 3</h5>
+                                        <p class="card-text">text text text</p>
+                                        <p class="card-text"><small class="text-muted">rating:</small></p>
+                                </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="..." alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Hike 2</h5>
+                                        <p class="card-text">text text text</p>
+                                        <p class="card-text"><small class="text-muted">rating:</small></p>
+                                </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="..." alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Hike 1</h5>
+                                        <p class="card-text">text text text</p>
+                                        <p class="card-text"><small class="text-muted">rating:</small></p>
+                                </div>
+                        </div>
+                    </div>
+                    <div class=col-1></div>
+                </div>
+        </div>
+<!-- footer -->
+<div class="footer fixed-bottom">
+        <div class="card-footer text-muted" id="footer">
+            <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
+        </div>
     </div>
-    </div>
-    <!-- footer -->
-    <div class="footer fixed-bottom">
-            <div class="card-footer text-muted" id="footer">
-                <div class=foot>&copy;2018 WAAG TECHNOLOGY AND DESIGN GROUP</div>
-            </div>
-    </div>
+
     <!-- google api -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGqySJr47rVKYnN2R2UvMM4YDKlRP691c&callback=initMap" async
         defer></script>
+    <script src="./assets/javascript/app.js"></script>
 
 </body>
 
