--- a/signin.html
+++ b/signin.html
@@ -42,33 +42,29 @@
 
     <!-- Sign in Form -->
     <div class="container">
-        <div class="row" id="signintext">
-            <div class="col"></div>
+        <div class="row justify-content-center" id="signintext">
             <div class="col-8">
                 <h4>take-a-hike</h4>
                 <h1>Hello Hiker</h1>
                 <p>The trails are calling! Let's find the perfect trail for your next adventure. But first, please sign in.</p>
             </div>
-            <div class="col"></div>
         </div>
-        <div class="row" id="bodycontent">
-            <div class="col"></div>
+        <div class="row justify-content-center pt-3" id="bodycontent">
             <div class="col-8">
                 <form id="signin-form">
-                    <div class="form-group">
-                        <label for="Email">Email*</label>
-                        <p id="emailHelp">We'll never share your email with anyone else.</p>
+                    <div class="form-group pb-3">
+                        <label for="Email">Email</label>
+                        <p id="emailHelp">We'll never share your email.</p>
                         <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group pb-3">
                         <label for="Password">Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
-                    <button type="submit" id="signup" class="btn btn-primary">Sign-up</button>
-                    <button type="submit" id="login" class="btn btn-primary">Log-in</button>
+                    <button type="submit" id="signup" class="btn px-5 mr-4 mb-sm-3 mb-md-0 navybutton">Sign-up</button>
+                    <button type="submit" id="login" class="btn px-5 navybutton">Log-in</button>
                 </form>
             </div>
-            <div class="col"></div>
     </div>
 </div>
  <!-- footer -->
