Changed Map to Single Search page

--- a/singleresult.html
+++ b/singleresult.html
@@ -49,6 +49,8 @@
         </div>
         <div class="col"></div>
     </div>
+    <div class="col" id="map">
+    </div>
 <!-- Footer -->
     <div class="footer fixed-bottom">
         <div class="card-footer text-muted" id="footer">
